--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head><title> TypeScript Greeter </title></head>
+  <head><title> Test coverage </title></head>
   <body>
-    <script src='helloworld.js'></script>
   </body>
 </html>
